<resources>
    <string name="app_name">QuanLyLaptop</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="emailhint">Email...</string>
    <string name="password">Password</string>
    <string name="passwordhint">Password...</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="remember_me">Remember me?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_hint">Confirm password...</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_pick_role">PickRoleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ng_nh_p_v_i_t_c_ch">Đăng nhập với tư cách</string>
    <string name="admin">Admin</string>
    <string name="nh_n_vi_n">Nhân viên</string>
    <string name="kh_ch_h_ng">Khách hàng</string>
    <string name="search">search...</string>
    <string name="m_t_kh_u_hi_n_t_i">Mật khẩu hiện tại *</string>
    <string name="m_t_kh_u_m_i">Mật khẩu mới *</string>
    <string name="nh_p_l_i_m_t_kh_u_m_i">Nhập lại mật khẩu mới *</string>
    <string name="thay_i_m_t_kh_u">Thay đổi mật khẩu</string>
    <string name="h_y">Hủy</string>
    <string name="h">Họ</string>
    <string name="t_n">Tên</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="gi_i_t_nh">Giới tính</string>
    <string name="qu_qu_n">Quê quán</string>
    <string name="c_p_nh_t">CẬP NHẬT</string>
    <string name="home">Home</string>
    <string name="th_ng_b_o">Thông Báo</string>
    <string name="gi_h_ng">Giỏ Hàng</string>
    <string name="account">Account</string>

    <string-array name="gender_array">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
