<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2422F"
    android:orientation="vertical"
    tools:context=".Activity.PickRoleActivity">

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_fpt_shop" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/ng_nh_p_v_i_t_c_ch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/role_Admin"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="27sp"
            android:textColor="#F70303"
            android:text="@string/admin"
            android:background="@drawable/shape_button1"
            android:layout_width="270dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/role_NhanVien"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="27sp"
            android:textColor="#6404BF"
            android:text="@string/nh_n_vi_n"
            android:background="@drawable/shape_button1"
            android:layout_width="270dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/role_KhachHang"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="27sp"
            android:textColor="#C79605"
            android:text="@string/kh_ch_h_ng"
            android:background="@drawable/shape_button1"
            android:layout_width="270dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>