<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_Doi_Pass"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thay_i_m_t_kh_u"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textColor="#0DEE23"
            android:text="@string/h_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/password_icon"
        style="@style/TextInputLayoutOut"
        app:startIconTint="#0DEE23"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/m_t_kh_u_hi_n_t_i"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="19sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/password_icon"
        style="@style/TextInputLayoutOut"
        app:startIconTint="#0DEE23"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/m_t_kh_u_m_i"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="19sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/password_icon"
        style="@style/TextInputLayoutOut"
        app:startIconTint="#0DEE23"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="19sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <androidx.appcompat.widget.AppCompatButton
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="55dp"
            android:paddingEnd="55dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="THAY ĐỔI MẬT KHẨU"
            android:background="@drawable/shape_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>